[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/HammerPowerup.gd" type="Script" id=1]
[ext_resource path="res://Items/gfx/hammer.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="HammerPowerup" type="KinematicBody2D"]
position = Vector2( 8, 8 )
z_as_relative = false
collision_layer = 4
collision_mask = 69
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HammerSprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 1 )
playing = true

[node name="Area2DCollision" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 2 )

[node name="KinematicBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 3 )

[node name="DropSpawnTimer" type="Timer" parent="."]
wait_time = 1.1
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DropSpawnTimer" to="." method="_on_DropSpawnTimer_timeout"]
